# ember-network-connect

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.binary  Dockerfile.github  Dockerfile.runtime  README.md  build.md  justfile  local-build.sh
.github/workflows/: build.yml  rpi.yaml.ignore
docs/: command-line-arguments.md
scripts/: Dockerfile.template  start.sh
src/: config.rs  dnsmasq.rs  errors.rs  exit.rs  logger.rs  main.rs  network.rs  privileges.rs  server.rs
ui/: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: main.tsx
ui/src/components/: App.tsx  NetworkInfoForm.tsx  Notifications.tsx
ui/src/i18n/: en.json  index.ts
