[package]
name = "ember-network-connect"
version = "4.10.0"
authors = ["Zahari Petkov <zahari@balena.io>", "Brett Wilson <brett.wilson@netfire.net>"]
description = "Easy network setup for Linux devices from your mobile phone or laptop"

[dependencies]
#network-manager = "0.11"
network-manager = { git = "https://github.com/netfiredotnet/network-manager.git", branch = "master" }
clap = "2.24"
iron = "0.6"
iron-cors = "0.7"
staticfile = "0.5"
mount = "0.4"
router = "0.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
persistent = "0.4"
params = "0.8"
log = "0.3"
env_logger = "0.4"
nix = "0.10"
url = "1.7.1"

[dependencies.error-chain]
version = "0.11"
default-features = false

[profile.release]
lto = true
