[package]
name = "ember-network-connect"
version = "4.11.0"
edition = "2021"
authors = ["Zahari Petkov <zahari@balena.io>", "Brett Wilson <brett.wilson@netfire.net>"]
description = "Captive portal for resetting network settings to DHCP"

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# CLI parsing
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System
nix = { version = "0.29", features = ["signal", "process", "user"] }

# NetworkManager D-Bus interface
network-manager = { git = "https://github.com/netfiredotnet/network-manager.git", tag = "v0.14.3" }

[profile.release]
lto = true
